<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/cardElevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/profile_alter_dialog_margin">

            <TextView
                android:id="@+id/profile_enter_alter_dialog_messageTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_enter_alter_dialog_messageTV_Text"
                android:textAlignment="center"
                android:textColor="@color/Blue"
                android:textSize="@dimen/profile_alter_dialog_message_text_size"
                android:textStyle="italic"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/profile_alter_dialog_margin"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_enter_alter_dialog_imageIV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_icon_base"></de.hdodenhof.circleimageview.CircleImageView>

            </LinearLayout>

            <TextView
                android:id="@+id/profile_enter_alter_dialog_loginTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_alter_dialog_login_hint"
                android:padding="@dimen/profile_alter_dialog_margin"
                android:textColor="@color/Blue"
                android:textColorHint="@color/Grey"
                android:textSize="@dimen/profile_alter_dialog_login_text_size"></TextView>

            <EditText
                android:id="@+id/profile_enter_alter_dialog_passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_alter_dialog_password_Hint"
                android:inputType="textPassword"
                android:padding="@dimen/profile_alter_dialog_margin"
                android:textColor="@color/Blue"
                android:textColorHint="@color/Grey"
                android:textSize="@dimen/profile_alter_dialog_login_text_size"></EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/profile_alter_dialog_button_cancelBT"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:elevation="@dimen/cardElevation"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/white"
                        android:layout_weight="1"
                        app:cornerRadius="@dimen/alterDialog_cornerRadius_16dp"
                        app:strokeColor="@color/Blue"
                        app:strokeWidth="@dimen/alterDialog_strokeWidth_1dp"
                        app:tint="@color/white"
                        android:text="@string/alter_dialog_button_cancelBT_Text"
                        android:textColor="@color/Blue"
                        android:textSize="@dimen/profile_alter_dialog_message_text_size"></com.google.android.material.button.MaterialButton>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/profile_enter_alter_dialog_button_saveBT"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:elevation="@dimen/cardElevation"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/white"
                        android:layout_weight="1"
                        app:cornerRadius="@dimen/alterDialog_cornerRadius_16dp"
                        app:strokeColor="@color/Blue"
                        app:strokeWidth="@dimen/alterDialog_strokeWidth_1dp"
                        app:tint="@color/white"
                        android:text="@string/profile_enter_alter_dialog_button_saveBT_Text"
                        android:textColor="@color/Blue"
                        android:textSize="@dimen/profile_alter_dialog_message_text_size"></com.google.android.material.button.MaterialButton>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>